--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
   <style>
     :root{
-      --bg:#0b0c0e;          /* near‑black */
-      --fg:#f5f7fa;          /* off‑white */
+      --bg:#080808;          /* near‑black */
+      --fg:#ffffff;          /* off‑white */
       --muted:#b7bec7;       /* cool gray */
       --accent:#9ec1ff;      /* subtle signal tint */
       --grid:#111319;        /* gridlines */
