--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Euler — Coming out of Stealth</title>
+  <title>Euler — Future of Power Optimization</title>
   <meta name="description" content="Euler is coming out of stealth. The future of power optimization for mission‑scale operations." />
   <meta name="theme-color" content="#000000" />
   <!-- Open Graph / Twitter -->
