--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Euler — Future of Power Optimization</title>
-  <meta name="description" content="Euler is coming out of stealth. The future of power optimization for mission‑scale operations." />
+  <meta name="description" content="The future of power optimization for mission‑scale operations." />
   <meta name="theme-color" content="#000000" />
   <!-- Open Graph / Twitter -->
-  <meta property="og:title" content="Euler — Coming out of Stealth" />
+  <meta property="og:title" content="Euler — Future of Power Optimization" />
   <meta property="og:description" content="The future of power optimization for mission‑scale operations." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://eulerinc.us/" />
