--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </section>
 
     <footer>
-      © <span id="y"></span> Euler Inc. • <a href="mailto:hello@eulerinc.us">hello@eulerinc.us</a>
+      © <span id="y"></span> Euler Inc. • 
     </footer>
   </div>
 
